# malicious-demo-mcp-server

./: .gitignore  README.md  main.py  pyproject.toml
